News file for Stow.

* Changes in version 2.4.1

*** Fix precedence warning with Perl 5.40.

    Perl 5.40.0 extended the scope of the "Possible precedence issue
    with control flow operator" warnings to include ternary operators,
    which reintroduced this warning when running Stow on Perl >= 5.40.0.
    This has now been fixed.

*** Use shell-like parsing for =.stowrc= arguments

    If a file path or regex in =.stowrc= has a space, the option
    previously broke because it would have been treated as two options
    instead of one.  Now it's possible to include options using
    shell-like quoting, e.g.:

    --target="$HOME/dir with space in/file with space in"
    --ignore=\\$FOO\\$

*** Make dependency on LaTeX optional

    Previously, the installation instructions always built a PDF
    version of the manual, which required having LaTeX installed.
    However LaTeX is a large program which can be awkward to install,
    so this has now been made optional, and by default the PDF manual
    is not part of the build.  It can still be built via =make pdf=,
    and this is documented.

*** Fix Docker builds.

    Fix the return error 100 that was happening when trying to run
    the build script with docker.

*** Various maintainer tweaks

    Further improved the release process and its documentation in
    various minor ways.  Perl 5.40 has been added to the test matrix.

* Changes in version 2.4.0

*** --dotfiles now works with directories

    A long-standing bug preventing the --dotfiles option from working
    correctly with directories has been fixed.

    It should also works in combination with the --compat option.

*** Eliminated a spurious warning on unstowing

    2.3.1 introduced a benign but annoying warning when unstowing
    in certain circumstances.  It looked like:

      BUG in find_stowed_path? Absolute/relative mismatch between Stow dir X and path Y

    This was caused by erroneous logic, and has now been fixed.
